RESOLVED FIXED123760
DFG NewArray/NewArrayBuffer shouldn't be constructing with negative indexing
https://bugs.webkit.org/show_bug.cgi?id=123760
Summary DFG NewArray/NewArrayBuffer shouldn't be constructing with negative indexing
Filip Pizlo
Reported 2013-11-04 15:54:49 PST
Since they always use a forward-indexed scratch buffer. <rdar://problem/15356705>
Attachments
the patch (6.74 KB, patch)
2013-11-04 15:58 PST, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2013-11-04 15:58:38 PST
Created attachment 215961 [details] the patch
Filip Pizlo
Comment 2 2013-11-04 16:03:22 PST
Note You need to log in before you can comment on or make changes to this bug.